force-app/main/default/objects/FG_Assets__c/FG_Assets__c.object-meta.xml
<CustomObject>
    <label>FG Assets</label>
    <nameField>
        <displayFormat>Asset-{0000000}</displayFormat>
        <label>FG Assets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FG Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>