force-app/main/default/objects/FG_Assets__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <defaultValue>&apos;Badge:&apos; &amp;  BR() &amp;
&apos;Warehouse&apos; &amp; &apos; Code &apos;&amp; &apos;Access:&apos;&amp; BR() &amp;
&apos;Others:&apos;</defaultValue>
    <label>Additional Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>