force-app/main/default/objects/FG_Assets__c/fields/Application_Access__c.field-meta.xml
<CustomField>
    <fullName>Application_Access__c</fullName>
    <label>Application Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Smartsheet</fullName>
            </value>
            <value>
                <fullName>Gmail account</fullName>
            </value>
            <value>
                <fullName>Welkin Suite (SFDC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>