force-app/main/default/objects/FG_Assets__c/fields/Asset_Cost__c.field-meta.xml
<CustomField>
    <fullName>Asset_Cost__c</fullName>
    <description>Asset cost</description>
    <label>Asset Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>