force-app/main/default/objects/FG_Assets__c/fields/Asset_Model__c.field-meta.xml
<CustomField>
    <fullName>Asset_Model__c</fullName>
    <description>Dell XPS 2in1 13inch / 15inch , Mac Book Pro, ......</description>
    <inlineHelpText>Dell XPS 2in1 13inch / 15inch , Mac Book Pro, ......</inlineHelpText>
    <label>Asset Model</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>