force-app/main/default/objects/FG_Assets__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User/employee Asset has been assigned.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FG_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>