force-app/main/default/objects/FG_Assets__c/fields/Cell_Details__c.field-meta.xml
<CustomField>
    <fullName>Cell_Details__c</fullName>
    <inlineHelpText>Cell phone brand and model. Cell phone Number.</inlineHelpText>
    <label>Cell Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>