force-app/main/default/objects/FG_Assets__c/fields/Date_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Date_Purchased__c</fullName>
    <inlineHelpText>Asset order/purchase date</inlineHelpText>
    <label>Date Purchased</label>
    <type>Date</type>
</CustomField>