force-app/main/default/objects/FG_Assets__c/fields/Filigreen_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Filigreen_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Using Filigreen Cell phone and Number ?</inlineHelpText>
    <label>Filigreen Mobile ?</label>
    <type>Checkbox</type>
</CustomField>