force-app/main/default/objects/FG_Assets__c/fields/Monitor__c.field-meta.xml
<CustomField>
    <fullName>Monitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monitor ?</label>
    <type>Checkbox</type>
</CustomField>