force-app/main/default/objects/FG_Assets__c/fields/Monitor_Brand_Model__c.field-meta.xml
<CustomField>
    <fullName>Monitor_Brand_Model__c</fullName>
    <description>Size, Brand (Dell, Samsung..)</description>
    <inlineHelpText>Size, Brand (Dell, Samsung..)</inlineHelpText>
    <label>Monitor Brand/Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>