force-app/main/default/objects/FG_Assets__c/fields/Order_Source__c.field-meta.xml
<CustomField>
    <fullName>Order_Source__c</fullName>
    <label>Order Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazon.com</fullName>
            </value>
            <value>
                <fullName>Apple.com</fullName>
            </value>
            <value>
                <fullName>Bestbuy.com</fullName>
            </value>
            <value>
                <fullName>Costco.com</fullName>
            </value>
            <value>
                <fullName>Dell.com</fullName>
            </value>
            <value>
                <fullName>Frys.com</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Samsung.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>