force-app/main/default/objects/FG_Assets__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>related to onboarding request</inlineHelpText>
    <label>Related To</label>
    <referenceTo>IT_On_Boarding_Request__c</referenceTo>
    <relationshipLabel>FG Assets</relationshipLabel>
    <relationshipName>FG_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>