force-app/main/default/objects/FG_Assets__c/fields/Serial_Service_Tag_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Service_Tag_Number__c</fullName>
    <description>PC users : Press Windows key + R. Type cmd and enter. On command window paste &quot;WMIC BIOS GET SERIALNUMBER&quot; to get your service tag number.

MAC Users : https://support.apple.com/en-us/HT204308</description>
    <inlineHelpText>PC users : Press Windows key + R. Type cmd and enter. On command window paste &quot;WMIC BIOS GET SERIALNUMBER&quot; to get your service tag number.

MAC Users : https://support.apple.com/en-us/HT204308</inlineHelpText>
    <label>Serial/Service Tag Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>