force-app/main/default/objects/FG_Assets__c/fields/Software_License__c.field-meta.xml
<CustomField>
    <fullName>Software_License__c</fullName>
    <label>Software License</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MS Office</fullName>
            </value>
            <value>
                <fullName>MS Office- MAC</fullName>
            </value>
            <value>
                <fullName>PDF writer</fullName>
            </value>
            <value>
                <fullName>Lucid Chart</fullName>
            </value>
            <value>
                <fullName>Adobe - Photography</fullName>
            </value>
            <value>
                <fullName>AntiVirus - Bitdefender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>