force-app/main/default/objects/FG_Assets__c/fields/Total_Monitor__c.field-meta.xml
<CustomField>
    <fullName>Total_Monitor__c</fullName>
    <label>Total Monitor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Monitor__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>